<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_margin="@dimen/commonMargin"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/beginners"
    	 />
    <TextView 
        android:layout_margin="@dimen/commonMargin"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/www_example"
    	 />
    <cz.honza.backpropagation.components.HelpButton
        android:text="@string/load_from_www"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	custom:link="examples"
        />
    <TextView 
        android:layout_margin="@dimen/commonMargin"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/predefined_example"
    	 />
    <Spinner
        android:layout_marginTop="@dimen/commonMargin"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:entries="@array/functions"
    	android:id="@+id/new_task_spinner_example"
        />
   	<Button
   	    android:id="@+id/new_task_button_examle"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/load_example" />
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_margin="@dimen/commonMargin"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/advanced"
    	 />
    <TextView 
        android:layout_margin="@dimen/commonMargin"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/enter_layers"
    	 />
   	<Button
   	    android:id="@+id/new_task_run_editor"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/run_editor" />
</LinearLayout>
</ScrollView>