<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/import_load_data_text"
        android:layout_margin="@dimen/commonMargin" 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/load_csv_data"
    	android:textColor="@color/text" />
    <EditText
        android:inputType="textVisiblePassword"
        android:layout_margin="@dimen/commonMargin"
        android:id="@+id/import_load_text"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content" />
   	<Button
   	    android:id="@+id/import_load"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/load_file" />
    <TextView
        android:id="@+id/import_load_www_text"
        android:layout_margin="@dimen/commonMargin" 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/load_csv_www"
    	android:textColor="@color/text" />
    <EditText
        android:inputType="textVisiblePassword"
        android:layout_margin="@dimen/commonMargin"
        android:hint="@string/www_hint_csv"
        android:id="@+id/import_www_text"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content" />
   	<Button
   	    android:id="@+id/import_www"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/read_from_www" />
</LinearLayout>
</ScrollView>